Try to get rid of legacy API which can break starting with java 17 (#409)
Co-authored-by: Slawomir Jaranowski <s.jaranowski@gmail.com>